<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">WeatherApp</string>
    <string name="Masoura">AlMansoura</string>
    <string name="Manage_cities">Manage Cities</string>
    <string name="Add_city">Add City</string>
    <string name="Weather_widget">Weather Widget</string>
    <string name="Settings"> Settings</string>
    <string name="Temperature"> Temperature Units</string>
    <string name="language">Language</string>
    <string name="Celsius">ْ c</string>
    <string name="Fahrenheit">ْ F</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="Italian">Italian</string>
    <string name="French">French</string>
    <string name="Turkish">Turkish</string>
    <string name="English">English</string>
    <string name="Current_location">Current Location</string>
    <string name="city_home">Home City</string>
    <string name="no_connection">No Internet connection </string>
    <string name="error">Error</string>

</resources>
