<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context="training.weatherapp.Activities.ActivityWeatherWidget">



    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/widget_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon6"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:onClick="back_img_click"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/Weather_widget"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>
    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="8:25"
                    android:textColor="@android:color/white"
                    android:textSize="50dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="AM"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="El Mahala Elkobra"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="62dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_brightness_7_black_24dp"
                    android:tint="@android:color/white" />
                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="25dp"
                          android:text="28ْ "
                          android:textColor="@android:color/white"
                          android:textSize="24sp" />
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="37ْ /22 ْ"
                          android:textColor="@android:color/white"
                          android:textSize="18sp" />

                  </LinearLayout>
            </LinearLayout>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuesday,Aug 9"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="0.15"
            android:text="If Current Location and home city are diffrent ,  weather information for both cities will be display"
            android:textSize="14sp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/toolbar"
            android:background="@color/gray" />
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="16dp"
            android:text="@string/Current_location"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray"
        android:padding="10dp"
        android:text="@string/city_home" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/cities_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical">
            </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:text="@string/Add_city" />
        </LinearLayout>

    </ScrollView>



</LinearLayout>

